samples/_failures_safe/1761074240_5d0384_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed7f8cfb.c: In function ‘main’:
./samples/SAFE/__tmp_ed7f8cfb.c:154:13: error: expected declaration or statement at end of input
  154 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_ed7f8cfb.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed7f8cfb.c:154:13: error: expected declaration or statement at end of input
